--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -1,8 +1,10 @@
+@use 'vars' as *;
+
 Footer {
     text-align: center;
     margin-top: 3rem;
     border-top: .1rem solid #392b3b;
-    background-color: #392b3b;
+    background-color: $background;
     padding: .5rem;
     color: #d7afca;
     display: flex;
