--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -5,6 +5,8 @@
         background-color: transparent;
         border: none;
         position: absolute;
+        // top: 1rem;
+        // left: -1.6rem;
 
         .heart {
             width: 2.5rem;
