--- a/my-redux-app/src/scss/_about.scss
+++ b/my-redux-app/src/scss/_about.scss
@@ -1,5 +1,10 @@
 @import 'vars';
+@import 'fonts';
 
+
+body {
+    font-family: $main-font
+}
 .about-title {
    display: flex; 
    justify-content: center;
