--- a/my-redux-app/src/scss/_single.scss
+++ b/my-redux-app/src/scss/_single.scss
@@ -1,9 +1,137 @@
-.heart {
-    width: 2.5rem;
-    height: auto;
+@use "vars" as *;
+@use "fonts" as *;
+
+.single-wrapper {
+  font-family: $main-font;
+  position: relative;
+  //   height: 900px;
+
+  .single-content {
+    width: 310px;
+    display: block;
+    margin: 0 auto;
+
+    h1 {
+      text-align: center;
+    }
+
+    .mov-poster {
+      width: 310px;
+      display: block;
+      margin: 0 auto 20px;
+    }
+
+    .rating-and-fav {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .rating {
+      width: 2.25rem;
+      height: 2.25rem;
+      border: 2px solid $accent;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $accent;
+    }
+    .heart {
+      width: 2.5rem;
+      height: auto;
+    }
+
+    .fav {
+      background-color: transparent;
+      border: none;
+    }
+  }
+  .background-poster {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -100;
+    opacity: 35%;
+    object-fit: scale-down;
+
+    .mov-backdrop {
+      max-height: 900px;
+      object-fit: cover;
+      object-position: bottom center;
+      overflow: hidden;
+    }
+  }
 }
 
-.fav {
-    background-color: transparent;
-    border: none;
+@media (min-width: 900px) {
+  .single-wrapper {
+    .single-content {
+      width: auto;
+      //   max-width: 80%;
+      //   margin: 0 auto;
+      margin-left: 20px;
+      margin-right: 20px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto;
+      grid-template-areas:
+        "poster title title"
+        "poster rating-fav ."
+        "poster overview overview"
+        "poster release .";
+
+      .mov-poster {
+        width: 450px;
+        margin: 20px 0;
+      }
+
+      .mov-poster-div {
+        grid-area: poster;
+      }
+
+      h1 {
+        font-size: 3rem;
+        text-align: left;
+        margin-left: 20px;
+        align-self: end;
+        justify-self: start;
+        grid-area: title;
+      }
+
+      .rating-and-fav,
+      .overview,
+      .release-date {
+        margin-left: 20px;
+      }
+
+      .rating-and-fav {
+        grid-area: rating-fav;
+        max-width: 186.5px;
+      }
+
+      .overview {
+        grid-area: overview;
+      }
+
+      .release-date {
+        grid-area: release;
+        align-self: start;
+      }
+    }
+    .mov-backdrop {
+      height: 715px;
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .single-wrapper {
+    height: auto;
+    .single-content {
+      width: 1160px;
+      margin: 0 auto;
+    }
+  }
 }
