--- a/my-redux-app/src/scss/_single.scss
+++ b/my-redux-app/src/scss/_single.scss
@@ -49,14 +49,15 @@
   .background-poster {
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    height: 900px;
     z-index: -100;
     opacity: 35%;
     object-fit: scale-down;
 
     .mov-backdrop {
-      max-height: 900px;
+      height: 900px;
+      width: 100%;
       object-fit: cover;
       object-position: bottom center;
       overflow: hidden;
@@ -68,8 +69,6 @@
   .single-wrapper {
     .single-content {
       width: auto;
-      //   max-width: 80%;
-      //   margin: 0 auto;
       margin-left: 20px;
       margin-right: 20px;
       display: grid;
@@ -119,9 +118,13 @@
         align-self: start;
       }
     }
-    .mov-backdrop {
+    .background-poster {
       height: 715px;
       width: 100%;
+      .mov-backdrop {
+        height: 715px;
+        width: 100%;
+      }
     }
   }
 }
