--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -1,3 +1,5 @@
+@use 'vars' as *;
+
 .movie-fav {
     position: relative;
 
@@ -5,12 +7,96 @@
         background-color: transparent;
         border: none;
         position: absolute;
-        // top: 1rem;
-        // left: -1.6rem;
+        right: 0;
+        z-index: 100;
+        cursor: pointer;
 
         .heart {
             width: 2.5rem;
             height: auto;
+        }
+
+    }
+}
+
+.dropdown {
+    border: none;
+    margin: 1rem;
+    width: 15rem;
+    height: 2rem;
+    background-color: $header-footer;
+    color: white;
+    font-weight: 450;
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.hover {
+
+        max-width: 200px;
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.8);
+        height: 303.5px;
+        cursor: pointer;
+        display: none;
+
+    .overview {
+        margin-top: 3.5rem;
+    }
+
+    .rating {
+        background-color: $accent;
+        border-radius: 50%;
+        height: 30px;
+        width: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        color: black;
+        top: -.8rem;
+        left: .8rem;
+        padding: .3rem;
+    }
+
+    button {
+        border: none;
+        background-color: $accent;
+        height: 1.5rem;
+        width: 50%;
+        border-radius: 5px;
+        display: block;
+        margin: 0 auto;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .movie-info:hover {
+        background-color: white;
+        text-align: $header-footer;
+    }
+
+}
+
+.movie-info {
+
+    h2 {
+        font-weight: 600;
+        font-size: 1rem;
+        max-width: 200px;
+    }
+
+}
+
+.movie-fav {
+    &:hover {
+        .hover {
+            display: block;
         }
     }
 }
