fixed hover styling

--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -44,6 +44,11 @@
 
     .overview {
         margin-top: 3.5rem;
+        color: white;
+    }
+
+    .date {
+        color: white;
     }
 
     .rating {
@@ -89,6 +94,7 @@
         font-weight: 600;
         font-size: 1rem;
         max-width: 200px;
+        color: white;
     }
 
 }
