header/footer stuff

--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -3,7 +3,7 @@
 Footer {
   text-align: center;
   margin: 0px;
-  margin-top: 3rem;
+  // margin-top: 3rem;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -11,7 +11,7 @@ Footer {
   // border-top: 0.1rem solid #392b3b;
   background-color: #392b3b;
   width: 100%;
-  padding: 1rem;
+  // padding: 1rem;
   color: #d7afca;
   //   display: flex;
   //   justify-content: space-between;
