fix about font color

--- a/my-redux-app/src/scss/_about.scss
+++ b/my-redux-app/src/scss/_about.scss
@@ -11,7 +11,7 @@
     // display: flex;
     // flex-direction: column;
     p {
-        color: $accent;
+        color: white;
         max-width: 800px;
         margin: 0 auto;
         line-height: 1.5;
@@ -25,21 +25,4 @@
     padding-bottom: 8rem;
 }
 
-// body {
-//     font-family: $main-font;
-//     color: $accent;
-    
-// }
 
-// .about-content {
-//     line-height: 1.5;
-//     padding: 10rem;
-//     font-size: 1.5rem;
-// }
-
-// img {
-
-//     max-width: 500px;
-//     display: block;
-//     margin: 50px auto;
-// }
