--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -76,6 +76,11 @@
         margin: 0 auto;
     }
 
+    .more-info:hover {
+        background-color: white;
+        color: $header-footer;
+    }
+
     a {
         text-decoration: none;
         color: black;
