--- a/my-redux-app/src/scss/_favourites.scss
+++ b/my-redux-app/src/scss/_favourites.scss
@@ -4,26 +4,59 @@ main {
     padding: 2rem;
 }
 
-.favourites-page {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 1.5rem;
+.nav-wrapper {
+    height: 89vh;
 }
 
 .fav-pg-nofav {
+
     display: flex;
-    gap: 1rem;
+    flex-direction: column;
     align-items: center;
-    font-weight: 400;
-    font-size: 1.5rem;
-    justify-content: space-between;
 
     p {
-        max-width: 50%;
+        margin: 0;
+        font-size: 1.2rem;
+    }
+
+    img {
+        width: 225px;
+        height: 225px;
     }
 }
 
-header {
-    padding: 1rem;
+@media(min-width: 56.25em) {
+
+    .favourites-page {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        gap: 1.5rem;
+    }
+    
+    .fav-pg-nofav {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        align-items: center;
+        font-weight: 400;
+        font-size: 1.5rem;
+        justify-content: space-between;
+    
+        p {
+            max-width: 50%;
+        }
+
+        img {
+            width: 20rem;
+            height: 20rem;
+        }
+    }
+    
+    header {
+        padding: 1rem;
+    }
+    
 }
+
+
