--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -34,12 +34,12 @@
 .hover {
 
         max-width: 200px;
+        width: 200px;
         z-index: 1;
         position: absolute;
         top: 0;
         background-color: rgba(0, 0, 0, 0.8);
         height: 303.5px;
-        cursor: pointer;
         display: none;
 
     .overview {
