--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -108,7 +108,17 @@
 
 }
 
-.banner {
-    max-width: 100%;
-    height: 100vh;
+.megan {
+
+    img{
+        width: 100%;
+        margin-left: -2rem;
+        margin-right: -2rem;
+        align-items: center;
+        display: flex;
+        justify-content: center;    
+
+
+    }
+   
 }
