--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -19,27 +19,40 @@ Footer {
   //   align-items: flex-end;
 
   img {
-    height: 5rem;
+    height: 3rem;
   }
+  .desktopFooter {
+  }
+}
+.boxTwo {
+  height: 100px;
+  // z-index: 11111111;
 }
 .navIcons {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 5px 15px 5px 15px;
+  padding: 5px 15px;
+}
+
+@media (min-width: 345px) {
+  Footer {
+    img {
+      height: 4rem;
+    }
+  }
 }
 
 @media (min-width: 900px) {
   Footer {
-    position: static;
+    position: relative;
     bottom: 0;
-    width: 100%;
   }
   .navIcons {
     display: none;
   }
   .copyRight {
-    display: inline-block;
+    display: block;
     margin-left: 20px;
   }
   .footerLogo {
@@ -49,6 +62,9 @@ Footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
   }
 }
 
@@ -56,7 +72,7 @@ Footer {
   .desktopFooter {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     text-align: center;
   }
   .footerLogo {
