--- a/my-redux-app/src/scss/_favourites.scss
+++ b/my-redux-app/src/scss/_favourites.scss
@@ -2,7 +2,19 @@
 
 main {
     padding: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.favourites-page {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    
+    .image-container {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .fav-pg-nofav {
@@ -20,15 +32,15 @@ main {
         width: 225px;
         height: 225px;
     }
+
 }
 
-@media(min-width: 56.25em) {
+@media(min-width: 37.5em) {
 
     .favourites-page {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        gap: 1.5rem;
     }
     
     .fav-pg-nofav {
