--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -1,5 +1,9 @@
 @use 'vars' as *;
 
+.site-wrapper {
+    max-width: 1920px;
+}
+
 .movie-fav {
     position: relative;
     border: .1rem solid #d987be;
@@ -17,6 +21,7 @@
         position: absolute;
         right: 0;
         z-index: 100;
+        width: 3.7rem;
         cursor: pointer;
 
         .heart {
