--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -136,8 +136,9 @@
         align-items: center;
         display: flex;
         justify-content: center;    
-
-
+        object-fit: cover;
+        object-position: center;
+        height: 60vh;
     }
    
 }
