--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -117,11 +117,13 @@
 
     img{
         width: 100%;
+        height: 40rem;
         margin-left: -2rem;
         margin-right: -2rem;
         align-items: center;
         display: flex;
-        justify-content: center;    
+        justify-content: center;  
+
 
 
     }
