--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -19,7 +19,8 @@ Footer {
   //   align-items: flex-end;
 
   img {
-    height: 5rem;
+    height: 3.5rem;
+    padding: .5rem;
   }
 }
 .navIcons {
