--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -132,8 +132,8 @@
     img{
         width: 100%;
         height: 40rem;
-        margin-left: -2rem;
-        margin-right: -2rem;
+        // margin-left: -2rem;
+        // margin-right: -2rem;
         align-items: center;
         display: flex;
         justify-content: center;    
