--- a/my-redux-app/src/scss/_nav.scss
+++ b/my-redux-app/src/scss/_nav.scss
@@ -8,7 +8,8 @@
   align-items: center;
 
   img {
-    height: 6rem;
+    height: 4rem;
+    padding: .5rem;
     // position: absolute;
     // top: 1rem;
     // padding-left: 1rem;
