more css things

--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -28,6 +28,11 @@ Footer {
   height: 100px;
   // z-index: 11111111;
 }
+// .searchIcon {
+//   .boxTwo {
+//     display: block;
+//   }
+// }
 .navIcons {
   display: flex;
   justify-content: space-between;
