--- a/my-redux-app/src/scss/_nav.scss
+++ b/my-redux-app/src/scss/_nav.scss
@@ -4,7 +4,8 @@
   // padding-right: 30px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
 
   img {
@@ -46,7 +47,6 @@
 
 .box {
   position: relative;
-  width: 7%;
 }
 
 .input {
