--- a/my-redux-app/src/scss/_single.scss
+++ b/my-redux-app/src/scss/_single.scss
@@ -34,7 +34,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      color: $accent;
+      background-color: $accent;
+      color: black;
     }
     .heart {
       width: 2.5rem;
