--- a/my-redux-app/src/scss/_home.scss
+++ b/my-redux-app/src/scss/_home.scss
@@ -37,11 +37,12 @@
 
 .row {
   margin-top: 1rem;
+  justify-content: center;
 }
 
 .dropdown {
   display: block;
-  margin: 0 auto;
+  margin: 1rem 0 auto;
   border: none;
 
   //   margin: 1rem;
