--- a/my-redux-app/src/scss/_favourites.scss
+++ b/my-redux-app/src/scss/_favourites.scss
@@ -1,71 +1,68 @@
-@use 'vars' as *;
+@use "vars" as *;
 
 main {
-    padding: 2rem;
-    margin-bottom: 1.5rem;
+  padding: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.favs-wrapper {
+  margin-bottom: 3.5rem;
 }
 
 .favourites-page {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 
+  .image-container {
     display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    
-    .image-container {
-        display: flex;
-        justify-content: center;
-    }
+    justify-content: center;
+  }
 }
 
 .fav-pg-nofav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  p {
+    margin: 0;
+    font-size: 1.2rem;
+  }
+
+  img {
+    width: 225px;
+    height: 225px;
+  }
+}
+
+@media (min-width: 37.5em) {
+  .favourites-page {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .fav-pg-nofav {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
     align-items: center;
+    font-weight: 400;
+    font-size: 1.5rem;
+    justify-content: space-between;
 
     p {
-        margin: 0;
-        font-size: 1.2rem;
+      max-width: 50%;
     }
 
     img {
-        width: 225px;
-        height: 225px;
+      width: 24rem;
+      height: 24rem;
     }
+  }
 
+  header {
+    padding: 1rem;
+  }
 }
-
-@media(min-width: 37.5em) {
-
-    .favourites-page {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-    
-    .fav-pg-nofav {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        align-items: center;
-        font-weight: 400;
-        font-size: 1.5rem;
-        justify-content: space-between;
-    
-        p {
-            max-width: 50%;
-        }
-
-        img {
-            width: 20rem;
-            height: 20rem;
-        }
-    }
-    
-    header {
-        padding: 1rem;
-    }
-    
-}
-
-
