--- a/my-redux-app/src/scss/_footer.scss
+++ b/my-redux-app/src/scss/_footer.scss
@@ -4,7 +4,7 @@ Footer {
   text-align: center;
   margin: 0px;
   // margin-top: 3rem;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
 
